<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_sname"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:background="#D8BB81"
        android:text="@string/activity_register_signup">

    </Button>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/about_float_right2" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/about_float_left4" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        >
        <TextView
            android:id="@+id/login_name_cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="传家"
            android:textSize="40sp"
            android:fontFamily="@font/a"
            android:textColor="#2d2719"

            />
        <TextView
            android:layout_toRightOf="@id/login_name_cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#2d2719"
            android:fontFamily="@font/cinzel_bold"
            android:text="PassDown"

            />


    </RelativeLayout>


    <ProgressBar
        android:id="@+id/pb_reg"
        style="?android:attr/progressBarStyle"
        android:layout_width="108dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_back_to_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="256dp"
        android:text="@string/activity_register_lg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_logo"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="55dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_pwd_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_pwdhint"
            android:paddingBottom="15dp"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="#000000"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_pwd"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_confirm_pwd_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_repwd"
            android:paddingBottom="15dp"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="#000000"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_sname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_confirm_pwd"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_sname_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_surname"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_gname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_confirm_pwd"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_gname_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_firstname"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>