<?xml version="1.0" encoding="utf-8"?>
<!--One artifact display for recycle view adapter-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginHorizontal="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/input_outline"
            tools:srcCompat="@tools:sample/avatars[12]" />

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_image"
                android:paddingTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/text_title"
                android:textSize="20sp"
                android:fontFamily="@font/b"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/post_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_title"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/text_desc"
                android:maxLines="2"
                android:ellipsize="end"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/post_date"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="9dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:textColor="#B3B3BA"
                    android:ellipsize="end"
                    android:fontFamily="@font/cinzel_regular"
                    android:maxLines="1"
                    android:paddingRight="12dp"
                    android:text="@string/text_date"
                    android:textSize="10sp" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>

