<?xml version="1.0" encoding="utf-8"?>
<!--One artifact display for recycle view adapter-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="120dp"
    android:layout_marginTop="25dp"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="5dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/post_image_s"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/input_outline"
            tools:srcCompat="@tools:sample/avatars[12]" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_detail_mask"/>

        <TextView
            android:id="@+id/post_title_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_image"
            android:layout_alignParentBottom="true"
            android:text="@string/text_title"
            android:textSize="12sp"
            android:paddingHorizontal="7dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/h"
            android:textColor="@color/white_bg_ea"
            android:maxLines="1"
            android:ellipsize="end"
            />




        <!--  currently no date needed    -->
>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/post_desc_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_title"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/text_desc"
                android:maxLines="2"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/post_date_s"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:textColor="#B3B3BA"
                android:ellipsize="end"
                android:fontFamily="@font/cinzel_regular"
                android:maxLines="1"
                android:paddingRight="12dp"
                android:text="@string/text_date"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>


    </RelativeLayout>





</androidx.cardview.widget.CardView>

